fixes #252 by adding an help page specific to the hungarian release (added it in english, and also added a soon-to-be hungarian translated version of the same page); changes the list of help resources (in the properties file) for both releases; improves the base-release english help page

--- a/src/main/resources/help/help_en.html
+++ b/src/main/resources/help/help_en.html
@@ -33,9 +33,19 @@ The tool includes features such as:
 </p>
 
 <ul>
-<li>BagIt, a hierarchical file packaging format for storage and transfer of arbitrary digital content.  A "bag" has just enough structure to enclose descriptive "tags" and a "payload" but does not require knowledge of the payload's internal semantics. This BagIt format should be suitable for disk-based or network-based storage and transfer.  BagIt is widely used in the practice of digital preservation. The specification of BagIt can be found <a href="https://tools.ietf.org/html/draft-kunze-bagit-13">here</a>.</li>
-<li>E-ARK SIP format, a Submission Information Package format developed by the EU funded E-ARK Project. The specification can be found <a href="http://www.eark-project.com/resources/project-deliverables/17-d32-e-ark-sip-draft-specification/file">here</a>
-</li>
+    <li>BagIt, a hierarchical file packaging format for storage and transfer of arbitrary digital content.  A "bag" has just enough structure to enclose descriptive "tags" and a "payload" but does not require knowledge of the payload's internal semantics. This BagIt format should be suitable for disk-based or network-based storage and transfer.  BagIt is widely used in the practice of digital preservation. The specification of BagIt can be found <a href="https://tools.ietf.org/html/draft-kunze-bagit-13">here</a>.</li>
+    <li>E-ARK SIP format, a Submission Information Package format developed by the EU funded E-ARK Project. The specification can be found <a href="http://www.dasboard.eu/specifications/sip">here</a></li>
+</ul>
+
+<h2>RODA-in Releases</h2>
+
+RODA-in is available in two flavors: the base release and the Hungarian release. Both releases provide the same feature-set, with the Hungarian release differing from the base release in the following:
+
+<ul>
+    <li>Support for creating SIPs in the Hungarian SIP 4 format;</li>
+    <li>Additional metadata can be added to the SIP's METS Header (this option is available for the Hungarian SIP 4 and the E-ARK SIP);</li>
+    <li>The EAD2002 template has been improved to fit the needs of the National Archives of Hungary;</li>
+    <li>Addition of the "Documentation" descriptive metadata template, which can be used to fill in additional metadata fields.</li>
 </ul>
 
 <h1>Layout</h1>
